force-app/main/default/objects/Client_Office_Intranet__c/Client_Office_Intranet__c.object-meta.xml
<CustomObject>
    <label>Intranet Client Office</label>
    <nameField>
        <label>Intranet Client Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Client Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>