force-app/main/default/objects/Client_Office_Intranet__c/fields/Account_Associate__c.field-meta.xml
<CustomField>
    <fullName>Account_Associate__c</fullName>
    <label>Account Associate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>