force-app/main/default/objects/Client_Office_Intranet__c/fields/Client_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Office_ID__c</fullName>
    <externalId>true</externalId>
    <label>Client Office ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>