force-app/main/default/objects/Client_Office_Intranet__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>