force-app/main/default/objects/Client_Office_Intranet__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>