force-app/main/default/objects/Client_Office_Intranet__c/fields/Company_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Company_Intranet__c</fullName>
    <label>Company Name</label>
    <referenceTo>Company_Intranet__c</referenceTo>
    <relationshipLabel>Intranet Client Offices</relationshipLabel>
    <relationshipName>Client_Offices_Intranet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>