force-app/main/default/objects/Client_Office_Intranet__c/fields/Default_Package__c.field-meta.xml
<CustomField>
    <fullName>Default_Package__c</fullName>
    <label>Default Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>