force-app/main/default/objects/Client_Office_Intranet__c/fields/Forum_Package__c.field-meta.xml
<CustomField>
    <fullName>Forum_Package__c</fullName>
    <label>Forum Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>