force-app/main/default/objects/Client_Office_Intranet__c/fields/Forum_Payment_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Forum_Payment_Scheme__c</fullName>
    <label>Forum Payment Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>