force-app/main/default/objects/Client_Office_Intranet__c/fields/Forum_Status__c.field-meta.xml
<CustomField>
    <fullName>Forum_Status__c</fullName>
    <label>Forum Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>