force-app/main/default/objects/Client_Office_Intranet__c/fields/Nominal_Hourly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Hourly_Revenue__c</fullName>
    <label>Nominal Hourly Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>