force-app/main/default/objects/Client_Office_Intranet__c/fields/Number_of_Intranet_Entities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Intranet_Entities__c</fullName>
    <label>Number of Intranet Entities</label>
    <summaryForeignKey>Company_Client_Office__c.Client_Office_Intranet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>