force-app/main/default/objects/Client_Office_Intranet__c/fields/Package_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Package_Owner_ID__c</fullName>
    <label>Package Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>