force-app/main/default/objects/Client_Office_Intranet__c/fields/Pegged_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Pegged_Team_Member__c</fullName>
    <label>Pegged Team Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>