force-app/main/default/objects/Client_Office_Intranet__c/listViews/All_Client_Offices.listView-meta.xml
<ListView>
    <fullName>All_Client_Offices</fullName>
    <columns>NAME</columns>
    <columns>Company_Intranet__c</columns>
    <columns>Company_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Client Offices</label>
</ListView>